--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
-    <string name="app_name">RecipeBook</string>
+    <string name="app_name">KitchenKravings</string>
     <string name="title_activity_main_screen">MainScreen</string>
+    <string name="web_client_id">747139843474-i6672rragg4sl7usbdh0anleiojm06vi.apps.googleusercontent.com</string>
+    <string name="KitchenAd">ca-app-pub-7978175745854580/8781232902</string>
 </resources>
